# renewable-analysis

./: .gitignore  .pre-commit-config.yaml  Makefile  PLOTTING_GUIDE.md  README.md  configure_project.sh  environment.yml  pyproject.toml  renewable_analysis.mplstyle
.github/agents/: a_new_agent_test.agent.md
.github/workflows/: ci.yml
data/demand/DailyPeaks/: IID_daily_peaks_reference_2025.csv  LDWP_daily_peaks_reference_2025.csv  NCNC_daily_peaks_reference_2025.csv  PGE_daily_peaks_reference_2025.csv  SCE_daily_peaks_reference_2025.csv  SDGE_daily_peaks_reference_2025.csv  WECC-MTN_daily_peaks_reference_2025.csv  WECC-NW_daily_peaks_reference_2025.csv  WECC-SW_daily_peaks_reference_2025.csv
data/hydro/: Baseline Weekly Generation 1980 - 2020_May29.csv  EC-Earth3 Weekly Generation 2015 - 2060_May29.csv  List_of_WEAP_hydropower_generators_rivers.csv  MIROC6 Weekly Generation 2015 - 2060_May29.csv  MPI-ESM1-2-HR Weekly Generation 2015 - 2060_May29.csv  TaiESM1 Weekly Generation 2015 - 2060_May29.csv
data/load_zone_shapefiles/: allLoadZones.dbf  allLoadZones.shp  allLoadZones.shx
notebooks/: A2_climate_var_change_plots.ipynb  B1_compute_drought_threshold.ipynb  B2_calculate_drought_mask_from_thresholds.ipynb  B2_old_calculate_drought_from_thresholds catalog version.ipynb  B3_compute_drought_stats_from_mask.ipynb  B3_summarize_droughts_from_event_catalog.ipynb  B4_visualize_drought_changes.ipynb  calculate_drought_from_thresholds.ipynb  data_loading_demo.ipynb  example.ipynb  largescale_change_in_generation.ipynb  test_e3_model_data.ipynb  test_less_redundant_window_sei.ipynb  test_load_hydo_data.ipynb  test_sei_on_domain.ipynb  validate_gwl_slicing.ipynb  windFacility.ipynb
notebooks/coincident_drought/: coincident_drought_per_resource.ipynb  compute_regional_drought_masks.ipynb  compute_regional_drought_masks_old.ipynb  regional_coincident_drought_analysis copy.ipynb  regional_coincident_drought_analysis.ipynb  seasonal_coincident_drought_analysis.ipynb
notebooks/coincident_drought/figures/: coincident_drought_per_resource.ipynb
notebooks/computing_standard_energy_index/: compute_standard_energy_index.ipynb
notebooks/concurrent_drought/: coincident_drought_analysis.ipynb  new_coincident_drought_analysis.ipynb  spatial_correlation.ipynb  test_shapefile_clipping.ipynb
notebooks/drought_and_climate_vars/: drought_climate_correlation copy.ipynb  drought_climate_correlation.ipynb  drought_climate_correlation_refactored.ipynb  regional_drought_climate_composites.ipynb
notebooks/electicity_demand_analysis/: climate_drivers_of_demand.ipynb  compute_demand_sei.ipynb  demand_summary_figures.ipynb  demand_vs_generation_sei_scatterplots_with_climate.ipynb  high_demand_low_supply_coincidence_analysis.ipynb  identify_high_demand_days.ipynb
notebooks/hydro_generation_data/: generate_hydro_SEI.ipynb  loading_hydro_generation_data.ipynb  visualize_change_in_hydro_drought.ipynb
notebooks/identify_resource_droughts/: generation_location_change_profile.ipynb  step1_compute_drought_threshold.ipynb  step2_calculate_drought_mask_from_thresholds.ipynb  step3_compute_drought_stats_from_mask.ipynb
notebooks/target_location_analysis_tools/: generation_location_change_profile.ipynb
scripts/: calculate_daily_sei.py  calculate_daily_sei_batched.py  calculate_daily_sei_chunked.py  create_drought_mask.py
src/: __init__.py  calculate_daily_sei.py  calculate_daily_sei_batched.py  calculate_daily_sei_chunked.py  climate_correlation.py  example.py  plotting_config.py  renewable_data_load.py  sei_computation.py  threshold_tools.py
tests/: conftest.py  test_example.py
(+2 files in other folders)
